<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_stats"
        android:title="@string/menu_stats"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export"
        android:title="@string/menu_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:title="@string/menu_import"
        app:showAsAction="never" />

</menu>